--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   fl_chart: ^0.66.2
-
+  provider: ^6.1.2
+  camera: ^0.11.2+1
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  http: ^1.6.0
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
